# hyperoil2

./: .env.donchian.template  .env.example  .gitignore  15M_STRATEGY.md  CLAUDE.md  DATA_STRATEGY.md  Dockerfile  FINAL_REPORT.md  config.yaml  docker-compose.yml  donchian_config.yaml  generate_report.py  pyproject.toml
.claude/agents/: donchian-data-qa.md
.claude/skills/: hm-designer.md  hm-engineer.md  hm-init.md  hm-qa.md
config/: ticker_mapping.json
deploy/scripts/: setup-vps.sh
deploy/systemd/: hyperoil.service
scripts/: check_donchian_health.sh  collect_data.py  collect_donchian_data.py  deploy_donchian_vps.sh  persist_donchian_to_db.py  run_backtest.py  run_donchian_backtest.py  run_donchian_optuna.py  run_donchian_paper.py  run_live.py  run_optuna.py  run_paper.py  verify_tickers.py
scripts/validation/: check_01_row_count.py  check_02_spot_prices.py  check_03_ohlc_logic.py  check_04_ts_alignment.py  check_05_sqlite_vs_parquet.py  check_06_gaps.py  check_07_extreme_returns.py  check_08_ffill_distribution.py  (+8 more)
tests/: conftest.py  test_config.py  test_dashboard.py  test_execution_client.py  test_exposure.py  test_fill_tracker.py  test_grid_logic.py  test_hedge_emergency.py  test_kill_switch.py  test_lifecycle.py  test_metrics.py  test_normalizer.py  test_orchestrator.py  test_order_manager.py  test_orderbook.py  test_position_plan.py  test_reconcile.py  test_regime.py  test_replay_engine.py  test_rest_client.py  test_risk_gate.py  test_risk_rules.py  test_signal_engine.py  test_simulator.py  test_spread.py  test_types.py  test_ws_feed.py  test_zscore.py
(+90 files in other folders)
